plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '3.1.5'
}

dependencies {
    implementation project(':bitcoinj-core')
    implementation 'com.google.guava:guava:33.5.0-jre'
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'org.jspecify:jspecify:1.0.0'
    implementation 'org.slf4j:slf4j-api:2.0.16'

    runtimeOnly 'org.slf4j:slf4j-jdk14:2.0.16'

    testImplementation platform('org.junit:junit-bom:6.0.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

configurations.configureEach {
    resolutionStrategy {
        force 'com.google.guava:guava:33.5.0-jre'
    }
}

javafx {
    version = '25.0.2'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release = 25
    options.compilerArgs << '-Xlint:deprecation'
}

javadoc.options.encoding = 'UTF-8'

application {
    mainClass = "wallettemplate.Main"
    mainModule = "wallettemplate"
}

jlink {
    options = ['--add-modules', 'org.slf4j.jul']
    mergedModule {
        requires 'java.logging'
        requires 'jdk.unsupported'

        requires 'org.slf4j'
    }
}

test {
    useJUnitPlatform()
}
